Fix spacing issue and round the high and low temps

--- a/src/Weather.scss
+++ b/src/Weather.scss
@@ -44,14 +44,14 @@
   justify-content: center;
 }
 
-.icon-temp-display {
+.icon-display {
   display: flex;
   justify-content: center;
 }
 
 .main-icon-display {
   // border: 1px solid black;
-  width: 50%;
+  width: 45%;
   height: auto;
 }
 
